<resources>
    <string name="app_name">EspañaSinGluten</string>
    <string name="nombre_app">Málaga Free</string>
    <string name="mapa_de_m_laga">Mapa de Málaga</string>
    <string name="productos">Productos</string>
    <string name="tickets_y_noticias">Tickets y Noticias</string>
    <string name="tickets">Crear Ticket</string>
    <string name="nombre">Nombre:</string>
    <string name="numeroTelefono">N.Teléfono:</string>
    <string name="ubicacionText">Ubicación:</string>
    <string name="horarioTxt">Horario:</string>
    <string name="restaurantes_bares_del_centro_de_m_laga">Restaurantes, Bares y Heladerias \n Del Centro De Málaga</string>
    <string name="restaurantes_bares_de_MalagaEste_de_m_laga">Restaurantes, Bares y Heladerias \n De Málaga Este</string>
    <string name="restaurantes_bares_del_PuertoDeLaTorre">Restaurantes, Bares y Heladerias \n Del Puerto De La Torre</string>
    <string name="restaurantes_bares_del_CruzDeHumilladero">Restaurantes, Bares y Heladerias \n De Cruz De Humilladero</string>
    <string name="restaurantes_bares_del_CarreteraDeCadiz">RRestaurantes, Bares y Heladerias \n De Carretera De Cadiz</string>
    <string name="restaurantes_bares_del_Churriana">Restaurantes, Bares y Heladerias \n De Churriana</string>
    <string name="restaurantes_bares_del_Campanilla">Restaurantes, Bares y Heladerias \n De Campanilla</string>
    <string name="restaurantes_bares_del_Teatinos">Restaurantes, Bares y Heladerias \n De Teatinos</string>
    <string name="restaurantes_bares_del_MonstesDeMalaga">Restaurantes, Bares y Heladerias \n De Montes De Málaga</string>
    <string name="aaccesibilidadTxt">Accesible:</string>
    <string name="buscar_por_codigo_de_barra">Buscar por Código de Barra</string>
    <string name="buscar_por_nombre_del_producto">Buscar por Nombre del Producto</string>
    <string name="escanear_c_digo_de_barra">Escanear Código de Barra</string>
    <string name="buscar">  Buscar Productos...</string>
    <string name="Crear_un_Ticket">Crear un Ticket</string>
    <string name="noticias">Noticias</string>
    <string name="titulo_ticket">En esta pantalla vas a poder crear un ticket para poder añadir productos a la base de dato.\n\n Solo necesitas rellenar los campos que se solicitan abajo</string>
    <string name="aceptar">Aceptar</string>
    <string name="text_dialog_pref_bar_rest_hel">En esta pantalla se mostraran la información de cada Bar, Restaurante o Heladería.\n Se pueden diferenciar en 3 colores:</string>
    <string name="buscar_por_zona_de">Buscar por zona de Málaga</string>
    <string name="ver_todo">Ver todos de Málaga</string>
    <string name="restaurantes_bares_de_m_laga">Restaurantes, Bares y Heladerias de Málaga</string>
    <string name="sponsors">SPONSORS</string>
    <string name="msg_donativvo">Si desea donar,\n puede hacerlo pulsando el boton de abajo</string>
    <string name="txt_donar">Donar</string>
    <string name="msg_informacion">¿Qué es ser celíaco?\n\n\n Ser celíaco significa tener una enfermedad autoinmune llamada enfermedad celíaca. Esta afección afecta al intestino delgado y se desencadena por la ingesta de gluten, una proteína presente en cereales como el trigo, la cebada, el centeno y sus derivados. En las personas celíacas, el sistema inmunológico reacciona de forma anormal ante el gluten, atacando y dañando la mucosa del intestino delgado.\n\n El daño en el intestino delgado dificulta la absorción adecuada de los nutrientes, lo que puede conducir a deficiencias nutricionales y una serie de síntomas variados El tratamiento para la enfermedad celíaca consiste en seguir una dieta estricta y libre de gluten de por vida. Al eliminar el gluten de la dieta, la mucosa intestinal se recupera gradualmente, y los síntomas mejoran, permitiendo una vida más saludable y activa.\n\n\n ¿Qué es MalagaFree?\n\nAplicación de restaurantes y productos sin gluten MalagaFree es una aplicación creada para ayudar a las personas celíacas, así como a aquellos que siguen una dieta libre de gluten por elección o necesidad, a encontrar restaurantes y productos sin gluten en la ciudad de Málaga (España). Principales características de la aplicación MalagaFree:\n\n1º Directorio de restaurantes sin gluten:\nLa app proporciona una lista completa de restaurantes y establecimientos de comida en Málaga que ofrecen opciones sin gluten en su menú. Los usuarios pueden buscar y filtrar restaurantes según su ubicación, tipo de cocina y valoraciones.\n\n2 Información de productos sin gluten:\nMalagaFree también cuenta con una base de datos de productos sin gluten disponibles en tiendas locales o supermercados. Los usuarios pueden buscar alimentos específicos, como pan sin gluten, galletas, pastas, entre otros, y conocer dónde comprarlos.\n\n En resumen, MalagaFree es una aplicación útil y práctica para personas celíacas y aquellos que buscan opciones sin gluten en la ciudad de Málaga. Facilita la búsqueda de lugares donde comer de forma segura y encontrar alimentos libres de gluten para llevar una dieta adecuada para su salud.</string>
    <string name="Text_dialog_modo_admin">Introduzca la contraseña</string>
    <string name="buscar_por_producots_genericos">Buscar por Producots Genericos</string>
    <string name="productos_genericos">PRODUCTOS GENERICOS</string>
    <string name="buscar_local_por_nombre">Buscar Local por Nombre</string>
</resources>