<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lytCardZonasMap"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imagen_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_icono_bar_negro"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/txtNombre_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/nombre"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp" />

    <TextView
        android:id="@+id/mostrarNombre_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/txtNumero_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/numeroTelefono"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp" />

    <TextView
        android:id="@+id/mostrarNumero_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/txtHorario_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/horarioTxt"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp" />

    <TextView
        android:id="@+id/mostrarHorario_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp" />

    <ImageButton
        android:id="@+id/btnNumero_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/azul"
        android:src="@drawable/ic_icono_telefono"
        android:layout_margin="10dp" />

</LinearLayout>
