<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
    android:padding="0dp"
    android:layout_margin="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_zonas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="1dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_icono_bar"
            />

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:text="@string/nombre"
            app:layout_constraintTop_toTopOf="@+id/mostrarNombre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/mostrarNombre"/>

        <TextView
            android:id="@+id/mostrarNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/mostrarNumero"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtNumero"
            app:layout_constraintTop_toBottomOf="@+id/imagen" />

        <TextView
            android:id="@+id/txtNumero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:text="@string/numeroTelefono"
            app:layout_constraintTop_toTopOf="@+id/mostrarNumero"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/mostrarNumero"/>

        <TextView
            android:id="@+id/mostrarNumero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/mostrarHorario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtNumero"
            app:layout_constraintTop_toBottomOf="@+id/mostrarNombre" />

        <TextView
            android:id="@+id/txtHorario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:text="@string/horarioTxt"
            app:layout_constraintTop_toTopOf="@+id/mostrarHorario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/mostrarHorario"/>

        <TextView
            android:id="@+id/mostrarHorario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/mostrarAccesibilidad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtNumero"
            app:layout_constraintTop_toBottomOf="@+id/mostrarNumero" />

        <TextView
            android:id="@+id/txtAccesibilidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:text="@string/aaccesibilidadTxt"
            app:layout_constraintTop_toTopOf="@+id/mostrarAccesibilidad"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/mostrarAccesibilidad"/>

        <TextView
            android:id="@+id/mostrarAccesibilidad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/mostrarUbicacion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtNumero"
            app:layout_constraintTop_toBottomOf="@+id/mostrarHorario" />

        <TextView
            android:id="@+id/txtUbicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:text="@string/ubicacionText"
            app:layout_constraintTop_toTopOf="@+id/mostrarUbicacion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/mostrarUbicacion"/>

        <TextView
            android:id="@+id/mostrarUbicacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtNumero"
            app:layout_constraintTop_toBottomOf="@+id/mostrarAccesibilidad"/>


        <ImageButton
            android:id="@+id/btnNumero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_icono_telefono"
            android:backgroundTint="@color/azul"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUbicacion"
            app:layout_constraintEnd_toStartOf="@+id/btnUbicacion"
            />

        <ImageButton
            android:id="@+id/btnUbicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_icono_ubicacion"
            android:backgroundTint="@color/azul"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@+id/mostarImagen"
            app:layout_constraintEnd_toStartOf="@+id/btnCarta"
            app:layout_constraintTop_toBottomOf="@+id/txtUbicacion"
            app:layout_constraintStart_toEndOf="@+id/btnNumero"
            />

        <ImageButton
            android:id="@+id/btnCarta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_icono_menu"
            android:layout_margin="10dp"
            android:backgroundTint="@color/azul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUbicacion"
            app:layout_constraintStart_toEndOf="@+id/btnUbicacion"
            />

        <ImageView
            android:id="@+id/mostarImagen"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/btnUbicacion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
